--- a/stylesheets/style.styl
+++ b/stylesheets/style.styl
@@ -2,6 +2,8 @@ body
     padding-top 70px
     font-family 'Raleway', sans-serif
 
+
+
 .navbar
     background rgba(255, 255, 255, 0.95)
     border none
@@ -9,18 +11,26 @@ body
 .navbar-border
     border-bottom 1px solid rgb(221, 221, 221)
 
+
+
 .btn-xs
     text-transform lowercase
 
 .btn-lg
     text-transform uppercase
 
+
+
 .spacer
     padding-top 20px
     padding-bottom 20px
 
+
+
 .click
     cursor pointer
+
+
 
 label
     padding-top 5px
@@ -32,21 +42,18 @@ input
     margin-right 10px !important
 
 
+
 // Disable navbar collapse
 
-.navbar-collapse.collapse {
+.navbar-collapse.collapse
     display block !important
-}
 
 .navbar-nav>li
-.navbar-nav {
+.navbar-nav
     float left !important
-}
 
-.navbar-nav.navbar-right:last-child {
+.navbar-nav.navbar-right:last-child
     margin-right -15px !important
-}
 
-.navbar-right {
+.navbar-right
     float right !important
-}
