--- a/views/items.jade
+++ b/views/items.jade
@@ -6,8 +6,14 @@ script(type='text/ng-template', id='items')
         //- pre.col-xs-12 {{ sData.items | json }}
 
 
-        form.row
-            .col-xs-10.col-sm-8.col-md-6.col-lg-4.col-xs-offset-1.col-sm-offset-2.col-md-offset-3.col-lg-offset-4
+
+        .row
+            .col-xs-12.col-sm-7.col-md-8
+                .form-group
+                    select.form-control(ng-disabled='sData.references.length < 1', ng-options='r._id as r._name for r in sData.references | orderBy : "_name"', ng-model='sData.selectedReference')
+                        option(value='')
+
+            .col-xs-12.col-sm-5.col-md-4
                 .form-group.has-feedback
                     input.form-control(type='search', ng-model='search')
                     span.glyphicon.glyphicon-search.form-control-feedback(aria-hidden="true")
