--- a/views/items.jade
+++ b/views/items.jade
@@ -22,5 +22,5 @@ script(type='text/ng-template', id='items')
 
         .row(ng-if='sData.items')
             label.col-xs-12(ng-repeat='item in sData.items | filter : search | orderBy : "_name"', for='item-{{ item._id }}')
-                input(type='checkbox', id='item-{{ item._id }}')
+                input(type='checkbox', id='item-{{ item._id }}', ng-checked='isReferenceSet(item._referenceIds)')
                 | {{ item._name }}
