--- a/views/items.jade
+++ b/views/items.jade
@@ -3,7 +3,7 @@ script(type='text/ng-template', id='items')
 
         .row.spacer
 
-        //- pre.col-xs-12 {{ sData.items | json }}
+        //- pre.col-xs-12 {{ sData.selectedReference | json }}
 
 
 
@@ -20,7 +20,10 @@ script(type='text/ng-template', id='items')
 
         .row.spacer
 
-        .row(ng-if='sData.items')
+        .row(ng-if='sData.items.length > 0')
             label.col-xs-12(ng-repeat='item in sData.items | filter : search | orderBy : "_name"', for='item-{{ item._id }}')
                 input(type='checkbox', id='item-{{ item._id }}', ng-checked='isReferenceSet(item._referenceIds)')
                 | {{ item._name }}
+
+        .row.spacer(ng-if='sData.items.length > 0')
+            .col-xs-12.text-center {{ sData.items.length }}
