--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,8 @@
 doctype html
 html(ng-app='inventuurApp')
     head
-        title Inventuur
+        title(ng-if='rData.pageTitle') {{ rData.pageTitle }} - Inventuur
+        title(ng-if='!rData.pageTitle') Inventuur
 
         meta(charset='utf-8')
         meta(name='viewport', content='initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, minimal-ui')
@@ -19,7 +20,8 @@ html(ng-app='inventuurApp')
         nav.navbar.navbar-default.navbar-fixed-top
             .container
                 .navbar-left
-                    .navbar-brand(ng-if='rData.user') {{ rData.user.name }}
+                    .navbar-brand(ng-if='rData.pageTitle') {{ rData.pageTitle }}
+                    .navbar-text(ng-if='rData.user') {{ rData.user.name }}
 
                 ul.nav.navbar-nav.navbar-left
                     li.navbar-text
