--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -19,15 +19,11 @@ html(ng-app='inventuurApp')
             .container
                 .navbar-left
                     .navbar-brand(ng-if='rData.pageTitle') {{ rData.pageTitle }}
-                    .navbar-text(ng-if='rData.user') {{ rData.user.name }}
-
-                ul.nav.navbar-nav.navbar-left
-                    li.navbar-text
                         img(is-loading, src='/images/loader.gif')
 
                 ul.nav.navbar-nav.navbar-right(ng-if='rData.user')
                     li
-                        a(href='/#/{{ rData.customer }}/logout') Välju
+                        a.text-warning(href='/#/{{ rData.customer }}/logout', title='rData.user') Välju
 
         #content.container
             div(ng-view)
