--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -12,6 +12,7 @@ html(ng-app='inventuurApp')
 
         style @@include('stylesheet.css')
 
+        script(defer, data-domain='inventuur.entu.eu', src='https://plausible.io/js/plausible.js')
         script @@include('javascript.js')
 
     body
